--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,60 @@
   background-position: right center;
   text-decoration: none;
 }
+.badgeHapus-grad {
+  background-image: linear-gradient(
+    to right,
+    #d31027 0%,
+    #ea384d 51%,
+    #d31027 100%
+  );
+  background-size: 200% auto;
+  color: white;
+  padding: 1px 4px; /* Lebih sempit */
+  font-size: 0.7rem;
+  font-weight: 500;
+  text-align: center;
+  border-radius: 999px;
+  display: inline-block;
+  box-shadow: 0 0 2px #aaa;
+  transition: 0.3s;
+  line-height: 1;
+  max-width: fit-content;
+}
+
+.badgeHapus-grad:hover {
+  background-position: right center;
+  color: #fff;
+  text-decoration: none;
+}
+
+.badgeTambah-grad {
+  background-image: linear-gradient(
+    to right,
+    #1fa2ff 0%,
+    #12d8fa 51%,
+    #1fa2ff 100%
+  );
+  background-size: 200% auto;
+  color: white;
+  padding: 1px 4px; /* Lebih sempit */
+  font-size: 0.7rem;
+  font-weight: 500;
+  text-align: center;
+  border-radius: 999px;
+  display: inline-block;
+  box-shadow: 0 0 2px #aaa;
+  transition: 0.3s;
+  line-height: 1;
+  max-width: fit-content;
+}
+
+.badgeTambah-grad:hover {
+  background-position: right center;
+  color: #fff;
+  text-decoration: none;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
